Dodano edycję sektora oraz stronicowane pobieranie parkingów i sektorów